[project]
name = "ComfyUI - Dynamic Prompts"
version = "0.2.0"
dependencies = [
    "dynamicprompts[attentiongrabber,magicprompt]~=0.30.1",
]

[tool.ruff]
target-version = "py310"
select = [
    "B",
    "C",
    "COM",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "C901", # Complexity
    "E501", # Line length
    "B019", # functools.lrucache
]
unfixable = [
    "B007", # Loop control variable not used within the loop body
]
